# assistive-robot

./: .gitignore  .gitmodules  LICENSE  README.md  foxglove visualization.json  occupancyGrid_005.npy  run_simulation.md  tsdf.npy
api_keys/: .secrets.json  firebase_secrets.json
confs/: .tmux-conf
confs/viz/: fvd_encore.rviz  grasp_ee_pose.rviz  robot.rviz  robot_nav.rviz
install_scripts/: art.sh  download_weights.sh  setup_brain.sh  setup_robot.sh
launch_scripts/: .tmux-conf  launch_brain.sh  launch_brain_vlmaps.sh  launch_robot.sh  launch_robot_3d.sh  old_launch_robot.sh
launch_scripts/tests/: full_test.sh  pick_manip_test.sh  place_manip_test.sh
src/common/alfred_core/: CMakeLists.txt  package.xml
src/common/alfred_core/config/: stretch.urdf  stretch_ik.urdf
src/common/alfred_core/launch/: deployment_perception.launch  driver.launch  navstack.launch  rviz.launch  simulator.launch
src/common/alfred_core/scripts/: alfred_driver.py  system_checker.py
src/common/alfred_description/: CMakeLists.txt  package.xml
src/common/alfred_description/urdf/: stretch_aruco.xacro  stretch_description.xacro  stretch_gripper.xacro  stretch_gripper_with_puller.xacro
src/common/alfred_msgs/: CMakeLists.txt  README.md  package.xml
src/common/alfred_msgs/msg/: DeploymentTask.msg  Speech.msg  SpeechTrigger.msg  StatusMessage.msg  Task.msg  TeleopCommands.msg
src/common/alfred_msgs/srv/: GlobalTask.srv  UpdateParam.srv  VerbalResponse.srv
src/common/debug_scripts/: check_dynamixels.py  clear_cuda_mem.py  speech_test.py  teleop.py  temp.json  temp.py  yolov5.py
src/interface/: README.md
src/interface/alfred_hri/: CMakeLists.txt  package.xml
src/interface/alfred_hri/config/: .gitignore  config.yaml  firebase_schema.json  gpt_prompt.txt
src/interface/alfred_hri/launch/: hri.launch
src/interface/alfred_hri/scripts/: firebase_node.py  generate_response.py  main.py  recognize_speech.py  wakeword_detector.py
src/interface/bak/interface_meta/: CMakeLists.txt  package.xml
src/interface/bak/response_generator/: CMakeLists.txt  package.xml
src/interface/bak/speech_recognition/: CMakeLists.txt  package.xml
src/interface/bak/speech_recognition/commands/: primitives.json
src/interface/bak/speech_recognition/config/: params.yaml
src/interface/bak/speech_recognition/include/: Audio.hpp  SpeechRecognitionHandle.hpp  Util.hpp  WhisperParams.hpp  WhisperWrapper.hpp
src/interface/bak/speech_recognition/launch/: speech_recognition.launch
src/interface/bak/speech_recognition/scripts/: recognize_speech.py
src/interface/bak/speech_recognition/src/: Audio.cpp  SpeechRecognitionHandle.cpp  Util.cpp  WhisperParams.cpp  WhisperWrapper.cpp  main.cpp  whisper.cpp
src/interface/bak/task_generator/: CMakeLists.txt  package.xml
src/interface/bak/wakeword_detector/: CMakeLists.txt  package.xml
src/interface/interface_manager/: CMakeLists.txt  package.xml
src/interface/interface_manager/config/: firebase_schema.json
src/interface/interface_manager/launch/: interface_manager.launch
src/interface/interface_manager/scripts/: firebase_node.py  interface_manager.py  monitor_server.py  process_updates.py  update_server.py
src/manipulation/: CMakeLists.txt  README.md  package.xml
src/manipulation/action/: DeticRequest.action  DrawerTrigger.action  FindAlign.action  PickPlaceTrigger.action  PickTrigger.action  PlaceTrigger.action  StowTrigger.action  Trigger.action
src/manipulation/config/: config.yaml
src/manipulation/launch/: robot_manipulation.launch  robot_manipulation_test.launch  simulation.launch
src/manipulation/scripts/: advanced_servoing.py  drawer_manip.py  find_and_align.py  fsm.py  helpers.py  manip_basic_control.py  pick.py  place.py  scene_parser.py  scene_parser_refactor.py  stow.py  visual_servoing.py
src/manipulation/scripts/aruco_manipulation/: aruco.py  manip_basic_control.py  visual_servoing_dep.py
src/manipulation/scripts/aruco_test/: aruco.py  helpers.py  main.py  manip_basic_control.py  visual.py  visual_servoing_dep.py
src/manipulation/scripts/debug/: collect_data.py  contact_safety.py  helpers.py  image_callback.py  joint_tests.py  store_lift_efforts.py  test_transforms.py  view_mesh.py
src/navigation/: README.md
src/navigation/alfred_navigation/: CMakeLists.txt  package.xml
src/navigation/moveback_recovery/: CMakeLists.txt  moveback_plugin.xml  package.xml
src/navigation/navigation_meta/: CMakeLists.txt  package.xml
src/navigation/vlmaps_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt
src/perception/: README.md
src/perception/grasp_detector/: CMakeLists.txt  package.xml
src/perception/image_shrink/: CMakeLists.txt  package.xml
src/perception/object_detection/: CMakeLists.txt  README.md  package.xml
src/perception/pcd_pub/: CMakeLists.txt  package.xml
src/perception/pcd_pub/config/: params.yaml
src/perception/pcd_pub/include/pcd_pub/: resized_publisher.h  resized_subscriber.h
src/perception/pcd_pub/launch/: low_res_pcd_pub.launch
src/perception/pcd_pub/src/: manifest.cpp  my_subscriber.cpp  pcd_publisher.cpp  resized_publisher.cpp  resized_subscriber.cpp
src/perception/plane_detector/: CMakeLists.txt  TODO.md  package.xml
src/perception/uatu/: CMakeLists.txt  package.xml
src/planning/: CMakeLists.txt  package.xml
src/planning/action/: PlanTrigger.action
src/planning/config/: config.yaml
src/planning/launch/: task_planner.launch
src/planning/mission_planner/: CMakeLists.txt  package.xml
src/planning/planning_meta/: CMakeLists.txt  package.xml
src/planning/scripts/: llm_planner.py
src/planning/task_planner/: CMakeLists.txt  package.xml
src/simulation/: README.md
src/simulation/ai2thor_interface/: CMakeLists.txt  package.xml
src/simulation/alfred_gazebo/: CMakeLists.txt  package.xml
src/telepresence/: CMakeLists.txt  package.xml
src/telepresence/config/: face_detection_params.yaml
src/telepresence/launch/: telepresence_manager.launch
src/telepresence/src/: human_detection.py  teleoperation.py  telepresence_manager.py  visual_servoing.py
(+323 files in other folders)
